--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Take The Whole Verse</title>
+        <title>Contact</title>
         <link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Russo+One&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel= "stylesheet" href="stylesheet.css">
     </head>
+
     <body>
       <div class="header">
         <div class="inner_header">
@@ -23,21 +24,16 @@
         <div class="hero_image"><img src="img_1.png" id="bg" alt="heroimage"></div>
       </div>
     <div class= "body_container">
-        <h1>Take The Whole Verse</h1>
-        <div class="container">
-        <div class="row">
-          <div class="col">
-      <p> Hey, I'm Delano. Welcome to my first self-coded webpage. </p>
-    </div>
-        <div class="col">
-      <p> I'm a designer, working primarily in 3D and 2D illustration.
-        I've always wanted to get into web programming but it was a bit
-        too complicated for me in the past. Thanks to online programs like
-        CS50, I can dive into it with some amount of control and leisure.
-      </p>
-      </div>
-
-      </div>
-
+      <h1>Contact</h1>
+      <div class="container">
+         <div class="row">
+            <div class="col">
+              <p><a href= "instagram.com/dez_himself"><a/>Instagram</p>
+            </div>
+            <div class="col">
+              <p>Behance</p>
+            </div>
+          </div>
     </body>
+
 </html>
