updated links and copy

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
             <ul class="navlinks">
               <a href="index.html"><li>Home</li></a>
               <a href="projects.html"><li>Projects</li></a>
-              <a href="Products.html"><li>Products</li></a>
+              <a href="products.html"><li>Products</li></a>
               <a href="contact.html"><li>Contact</li></a>
             </ul>
         </div>
@@ -28,10 +28,10 @@
       <div class="container">
          <div class="row">
             <div class="col">
-              <p><a href= "instagram.com/dez_himself"><a/>Instagram</p>
+              <p><a class="active"href="instagram.com/dez_himself">Instagram<a/></p>
             </div>
             <div class="col">
-              <p>Behance</p>
+              <p><a class="active" href="behance.net/dezhimself">Behance<a/></p>
             </div>
           </div>
     </body>
