--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel= "stylesheet" href="stylesheet.css">
     </head>
     <body>
+      <div class="hero_image"><img src="img_1.png" id="bg" alt="heroimage"></div>
       <div class="header">
         <div class="inner_header">
           <div class="logo_container">
@@ -16,28 +17,51 @@
             <ul class="navlinks">
               <a href="index.html"><li>Home</li></a>
               <a href="projects.html"><li>Projects</li></a>
-              <a href="Products.html"><li>Products</li></a>
+              <a href="products.html"><li>Products</li></a>
               <a href="contact.html"><li>Contact</li></a>
             </ul>
         </div>
-        <div class="hero_image"><img src="img_1.png" id="bg" alt="heroimage"></div>
+
       </div>
     <div class= "body_container">
         <h1>Take The Whole Verse</h1>
         <div class="container">
         <div class="row">
           <div class="col">
-      <p> Hey, I'm Delano. Welcome to my first self-coded webpage. </p>
+      <p> Hey, I'm Delano. Welcome to my first self-coded webpage.
+          I'm a designer, working primarily in 3D and 2D illustration.
+          I've always wanted to get into web programming.</p>
     </div>
         <div class="col">
-      <p> I'm a designer, working primarily in 3D and 2D illustration.
-        I've always wanted to get into web programming but it was a bit
-        too complicated for me in the past. Thanks to online programs like
-        CS50, I can dive into it with some amount of control and leisure.
+      <p>  It was a bit too complicated for me in the past but hanks to online programs
+        like CS50, I can dive into it with some amount of control and leisure.
       </p>
       </div>
 
       </div>
+  <div class="container" id="table">
+      <div class="row" id="row-table">
+        <div class="col">
+          <p> Prerequisite table to be completed for the Assignment:<p>
+      </div>
+<div class="col" id="table-header-col">
+        <table>
+          <tr>
+            <th>How Long Did It Take Me</th>
+            <th>To Complete This Assignment?</th>
+          </tr>
+      </div>
+        <div class="col">
+          <td>Too fuc</td>
+          <td>king long</td>
+          <tr>
+            <td>I think</td>
+            <td>&#128529;</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+   </div>
 
     </body>
 </html>
