--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
         <ul class="navlinks">
           <a href="index.html"><li>Home</li></a>
           <a href="projects.html"><li>Projects</li></a>
-          <a href="Products.html"><li>Products</li></a>
+          <a href="products.html"><li>Products</li></a>
           <a href="contact.html"><li>Contact</li></a>
         </ul>
     </div>
@@ -26,10 +26,11 @@
     <div class="container">
        <div class="row">
           <div class="col">
-      <p> My <a class="active"href:="http://www.dezhimself.com">design portfolio</a>.</p>
+      <p> My <a class="active"href="http://www.dezhimself.com">design portfolio</a>. Select
+      projects and walkthroughs of some of my work.</p>
     </div>
       <div class="col">
-      <p> My <a href:="http://www.thebranditself.com">blog</a> where I review and
+      <p> My <a class="active"href="http://www.thebranditself.com">blog</a> where I review and
         critique design practices in the advertising industry as well as my opinions on design
         leadership practices with it.</p>
     </div>
