--- a/products.html
+++ b/products.html
@@ -15,7 +15,7 @@
             <ul class="navlinks">
               <a href="index.html"><li>Home</li></a>
               <a href="projects.html"><li>Projects</li></a>
-              <a href="Products.html"><li>Products</li></a>
+              <a href="products.html"><li>Products</li></a>
               <a href="contact.html"><li>Contact</li></a>
             </ul>
         </div>
